--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,19 @@ input[type=number] {
   outline: none !important;
 }
 
+.jumbotron {
+  margin-bottom: 0px !important;
+  background-color: transparent !important;
+}
+
+
+.vertical-center {
+  min-height: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
 /* Marging & Padding */
 .panel-body {
   padding: 0 !important;
@@ -32,10 +45,6 @@ h1, h2, h3, h4, h5 {
 
 .sv_bootstrap_css .sv_qstn {
   padding: 0 !important;
-}
-
-.container {
-  margin-top: 10vh;
 }
 
 p {
@@ -74,16 +83,16 @@ p, .small span {
 /* Width Media Queries */
 @media only screen and (max-width: 320px) {
   h1, h5, h4 {
-    font-size: 14pt !important;
+    font-size: 20pt !important;
   }
-  p, .small {
-    font-size: 10pt !important;
+  p, .small span {
+    font-size: 12pt !important;
   }
 }
 
 @media only screen and (min-width: 321px) and (max-width: 375px){
   h1, h5, h4 {
-    font-size: 16pt !important;
+    font-size: 20pt !important;
   }
   p, .small span {
     font-size: 10pt !important;
@@ -92,16 +101,16 @@ p, .small span {
 
 @media only screen and (min-width: 376px) and (max-width: 414px){
   h1, h5, h4 {
-    font-size: 18pt !important;
+    font-size: 22pt !important;
   }
   p, .small span {
-    font-size: 12pt !important;
+    font-size: 10pt !important;
   }
 }
 
 @media only screen and (min-width: 415px) and (max-width: 600px){
   h1, h5, h4 {
-    font-size: 20pt !important;
+    font-size: 24pt !important;
   }
   p, .small span {
     font-size: 12pt !important;
@@ -110,7 +119,7 @@ p, .small span {
 
 @media only screen and (min-width: 601px) and (max-width: 823px){
   h1, h5, h4 {
-    font-size: 28pt !important;
+    font-size: 32pt !important;
   }
   p, .small span {
     font-size: 12pt !important;
@@ -140,8 +149,8 @@ p, .small span {
   h1 {
     margin-bottom: 2.8vh !important;
   }
-  .panel-footer {
-    margin-top: 3.2vh;
+  .panel-footer, .form-control, .sv_qcbc, #sq_106_ariaTitle {
+    margin-top: 3.2vh !important;
   }
 }
 
@@ -149,13 +158,20 @@ p, .small span {
   h1 {
     margin-bottom: 4vh !important;
   }
-  .panel-footer {
-    margin-top: 6vh;
+  .panel-footer, .form-control, .sv_qcbc, #sq_106_ariaTitle {
+    margin-top: 6vh !important;
   }
 }
 
-.sv_start_btn, .form-control {
+.sv_start_btn {
   margin: 0;
+  left: 50%;
+  position: relative;
+  -ms-transform: translate(-50%);
+  transform: translate(-50%);
+}
+
+.form-control {
   left: 50%;
   position: relative;
   -ms-transform: translate(-50%);
@@ -187,7 +203,7 @@ p, .small span {
 
 .form-control {
   display: block !important;
-  width: 50% !important;
+  width: 66.66% !important;
   height: 36px !important;
   background-color: transparent !important;
   line-height: 1.6 !important;
@@ -206,12 +222,21 @@ p, .small span {
   margin: 0 auto !important;
 }
 
+.alert-danger {
+  color:rgb(50, 51, 51) !important;
+  background-color: transparent !important;
+  border: 0px !important;
+  font-family: open-sans, sans-serif !important;
+}
+.alert {
+  margin: 0px !important;
+  border: 0px;
+  border-radius: 0px;
+}
 
-
-
-
-
-
+.sv_qstn fieldset {
+  text-align: center;
+}
 
 
 
